# cycleGAN

./: .editorconfig  .gitattributes  .gitignore  ABLATION_README.md  ABLATION_SETUP_SUMMARY.txt  ABLATION_STUDY.md  ABLATION_STUDY_ANALYSIS.ipynb  CONTRIBUTING.md  EDHUK_DATASET.md  EDHUK_DATASET_PREPARE.ipynb  GETTING_STARTED.md  LOCAL_SETUP.md  LOCAL_SETUP_GUIDE.ipynb  MANIFEST.in  README.md  ablation_configs.json  ablation_quickstart.sh  ablation_study.py  prepare_edhuk_dataset.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
datasets/edhuk_weather/: dataset_info.json
models/: base_model.py  cycle_gan_ablation_model.py
util/: util.py
