[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-cyclegan-pix2pix"
version = "1.0.0"
description = "PyTorch implementation of CycleGAN and pix2pix"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD"}
authors = [
    {name = "Jun-Yan Zhu", email = "junyanz@berkeley.edu"},
    {name = "Taesung Park", email = "taesung@csail.mit.edu"},
]
keywords = [
    "cyclegan",
    "pix2pix",
    "image-to-image translation",
    "unpaired learning",
    "paired learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.24.3",
    "scikit-image",
    "dominate>=2.8.0",
    "Pillow>=10.0.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
Repository = "https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix"
Documentation = "https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix/blob/master/docs/overview.md"
Issues = "https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix/issues"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
